# photo_attendance

./: README.md  pyproject.toml  run.sh
app/: README.md  config.py  dependencies.py  locks.py  logs_config.py  main.py  pyproject.toml  startup.py
app/constants/: thresholds.py
app/db/: init_db.py  schema.sql  student_details.db
app/frontend_dist/: index.html
app/frontend_dist/assets/: index-CiaoUkwt.js  index-k7W2X7eK.css
app/models/: student.py
app/routers/: attendance.py  health.py  register.py
app/services/: embedding_service.py  face_processing.py  qdrant_service.py  sqlite_service.py
app/state/: progress.py
