[project]
name = "photo-attendance"
version = "0.1.0"
description = "ML-Based Photo attendance system"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.121.2",
    "insightface>=0.7.3",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.0",
    "uvicorn>=0.38.0",
]
